WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172887
ASSERTION FAILED: m_currentScriptCallbackID in UIScriptContext::requestUIScriptCompletion(JSStringRef) running fast/events/ios/autocorrect-with-range-selection.html
https://bugs.webkit.org/show_bug.cgi?id=172887
Summary
ASSERTION FAILED: m_currentScriptCallbackID in UIScriptContext::requestUIScri...
Tim Horton
Reported
2017-06-02 18:13:59 PDT
ASSERTION FAILED: m_currentScriptCallbackID in UIScriptContext::requestUIScriptCompletion(JSStringRef) running fast/events/ios/autocorrect-with-range-selection.html
Attachments
Patch
(1.98 KB, patch)
2017-06-02 18:14 PDT
,
Tim Horton
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-06-02 18:14:27 PDT
Created
attachment 311895
[details]
Patch
Sam Weinig
Comment 2
2017-06-03 13:11:40 PDT
Comment on
attachment 311895
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=311895&action=review
> Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm:487 > + // applyAutocorrection can call its completion handler synchronously, > + // which makes UIScriptController unhappy (see
bug 172884
).
Should we change applyAutocorrection? Are we consistent about whether completionHandlers can call back synchronously?
Tim Horton
Comment 3
2017-06-03 21:09:03 PDT
(In reply to Sam Weinig from
comment #2
)
> Comment on
attachment 311895
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=311895&action=review
> > > Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm:487 > > + // applyAutocorrection can call its completion handler synchronously, > > + // which makes UIScriptController unhappy (see
bug 172884
). > > Should we change applyAutocorrection?
I don't think we can (it is the way it is for a reason: <
rdar://problem/16207002
>) yet.
> Are we consistent about whether > completionHandlers can call back synchronously?
I think the API is fairly consistent, but this is not API, this is our implementation of an internal UIKit method.
Tim Horton
Comment 4
2017-06-05 08:42:34 PDT
http://trac.webkit.org/changeset/217781/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug