ASSERTION FAILED: m_currentScriptCallbackID in UIScriptContext::requestUIScriptCompletion(JSStringRef) running fast/events/ios/autocorrect-with-range-selection.html https://bugs.webkit.org/show_bug.cgi?id=172887 <rdar://problem/32546061>

Reviewed by Sam Weinig.

* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::applyAutocorrection):
applyAutocorrection can call its completion handler synchronously,
which makes UIScriptController unhappy (see bug 172884).


Canonical link: https://commits.webkit.org/189809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217781 268f45cc-cd09-0410-ab3c-d52691b4dbfc